--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 
 body{
   font-family: "Montserrat", sans-serif;
@@ -7,3 +10,4 @@ body{
 .input_text::-webkit-scrollbar{
  display: none;
 }
+
