UI enhancements 8th Nov
-improved layout and UI
-improved Landing page
-added TOS page

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,9 +5,11 @@
 @custom-variant dark (&:is(.dark *));
 
 body{
-  font-family: "Montserrat", sans-serif;
+  font-family: "sans-serif", sans-serif;
 }
+
 .input_text::-webkit-scrollbar{
  display: none;
 }
+
 
